updated css and html close to final version

--- a/eas.html
+++ b/eas.html
@@ -8,9 +8,18 @@
 <body>
     <h1>Etch-a-sketch</h1>
     <main>
-        <div id="palette">Choose color</div>
+        <div id="palette">
+            <p>Choose color</p>
+            <button id="red">Red</button>
+            <button id="green">Green</button>
+            <button id="blue">Blue</button>
+            <button id="pencil">Pencil</button>
+            <button id="rainbow">Random</button>
+        </div>
         <div id="painting"></div>
-        <div id="pixels">Size of the grid</div>
+        <div id="utility">
+            <p>Erase the drawing board</p>
+            <button id="clear">Clear</button></div>
     </main>    
     <script src="eas.js"></script>
 </body>
