almost finished, need to remove event listener for rainbow aand add pencil

--- a/eas.html
+++ b/eas.html
@@ -10,17 +10,18 @@
     <main>
         <div id="palette">
             <p>Choose color</p>
-            <button id="red">Red</button>
-            <button id="green">Green</button>
-            <button id="blue">Blue</button>
+            <button id="red" class="colorbtn">Red</button>
+            <button id="green" class="colorbtn">Green</button>
+            <button id="blue" class="colorbtn">Blue</button>
             <button id="pencil">Pencil</button>
-            <button id="rainbow">Random</button>
+            <button id="randomclr">Random</button>
+            <button id="rainbow">Rainbow</button>
         </div>
         <div id="painting"></div>
         <div id="utility">
             <p>Erase the drawing board</p>
-            <button id="clear">Clear</button></div>
-    </main>    
+            <button id="clearbtn">Clear</button></div>
+    </main>
     <script src="eas.js"></script>
 </body>
 
