Finished. Its not perfect but I need to move on.

--- a/eas.html
+++ b/eas.html
@@ -13,14 +13,18 @@
             <button id="red" class="colorbtn">Red</button>
             <button id="green" class="colorbtn">Green</button>
             <button id="blue" class="colorbtn">Blue</button>
-            <button id="pencil">Pencil</button>
+            <!-- I couldnt get this function to not break my stuff -->
+            <!-- <button id="pencil">Pencil</button> -->
             <button id="randomclr">Random</button>
             <button id="rainbow">Rainbow</button>
         </div>
         <div id="painting"></div>
         <div id="utility">
             <p>Erase the drawing board</p>
-            <button id="clearbtn">Clear</button></div>
+            <button id="clearbtn">Clear</button>
+            <!-- <p>Current color</p>
+            <div id="currentcolor"></div> -->
+        </div>
     </main>
     <script src="eas.js"></script>
 </body>
